# Rewind

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/rewind-cli/: Cargo.toml  build.rs
crates/rewind-cli/src/: main.rs
crates/rewind-core/: Cargo.toml
crates/rewind-core/src/: checkout.rs  checkpoint.rs  commit.rs  config.rs  diff.rs  forensics.rs  history.rs  ignore.rs  init.rs  integrity.rs  lib.rs  object_store.rs  path_safety.rs  provenance.rs  replay.rs  repo.rs  restore.rs  run.rs  snapshot.rs  status.rs  trace.rs  transaction.rs  tui_model.rs
docs/: COMMANDS.md  INSTALL.md  LIMITATIONS.md  RELEASE.md  REPO_FORMAT.md  SAFETY.md  TESTING.md
examples/: basic-time-travel.sh  ignore-demo.sh  provenance-demo.sh  recovery-demo.sh  replay-demo.sh
scripts/: ci-check.sh  run-examples.sh
tests/: integration_tests.rs
